--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "mongoose": "^6.0.11",
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.1",
-    "nodemon": "^2.0.13"
+    "nodemon": "^2.0.13",
+    "yup": "^0.32.11"
   },
   "type": "module"
 }
